--- a/html_pages/author.html
+++ b/html_pages/author.html
@@ -12,20 +12,8 @@
       <link rel="stylesheet" href="assets/css/bootstrap.min.css">
       <!--Responsive Menu  CSS -->
       <link rel="stylesheet" href="assets/css/responsive-menu.css" />
-      <!-- lightbox CSS -->
-      <link rel="stylesheet" href="assets/css/lightbox.min.css">
-      <!-- Prism CSS -->
-      <link rel="stylesheet" href="assets/css/prism.css">
-      <!-- Owl carousel CSS -->
-      <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-      <!-- Font awesome CSS -->
-      <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-      <!-- Aos CSS -->
-      <link rel="stylesheet" href="assets/css/aos.css">
       <!-- Main CSS -->
       <link rel="stylesheet" href="assets/css/style.css">
-      <!-- Google font -->
-      <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
    </head>
    <body>
       <!-- ==================== PRELOADER HERE ===================================== -->
@@ -57,7 +45,7 @@
                                  <li><a href="/deeplearning">Deep Learning</a></li>
                                     </ul>
                                  </li>
-                                 <li><a href="/video">Video</a></li>
+                                 <li><a href="/video">Video</a></li><li><a href="/file">Image</a></li>
                                  <li class="has-submenu">
                                     <a href="/author">Author</a>
                                     <ul>
@@ -197,7 +185,7 @@
          <div class="row">
             <div class="col">
                <div class="footer-bottom text-center">
-                  <p>MyBlog demo -Bc</p>
+                  <a></a>
                </div>
             </div>
          </div>
