--- a/html_pages/blogs/searching-2.html
+++ b/html_pages/blogs/searching-2.html
@@ -12,16 +12,6 @@
    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
    <!--Responsive Menu  CSS -->
    <link rel="stylesheet" href="../assets/css/responsive-menu.css" />
-   <!-- lightbox CSS -->
-   <link rel="stylesheet" href="../assets/css/lightbox.min.css">
-   <!-- Prism CSS -->
-   <link rel="stylesheet" href="../assets/css/prism.css">
-   <!-- Owl carousel CSS -->
-   <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
-   <!-- Font awesome CSS -->
-   <link rel="stylesheet" href="../assets/css/fontawesome-all.min.css">
-   <!-- Aos CSS -->
-   <link rel="stylesheet" href="../assets/css/aos.css">
    <!-- Main CSS -->
    <link rel="stylesheet" href="../assets/css/style.css">
    <!-- Google font -->
@@ -58,7 +48,7 @@
                                  <li><a href="/deeplearning">Deep Learning</a></li>
                                     </ul>
                                  </li>
-                           <li><a href="/video">Video</a></li>
+                           <li><a href="/video">Video</a></li><li><a href="/file">Image</a></li>
                            <li class="has-submenu">
                               <a href="/author">Author</a>
                               <ul>
@@ -315,7 +305,7 @@ print('Solution path:',aStarGsa(practice, practiceH, 'S', 'G'))
    <div class="row">
       <div class="col">
          <div class="footer-bottom text-center">
-            <p>MyBlog demo -Bc</p>
+            <a></a>
          </div>
       </div>
    </div>
@@ -324,18 +314,8 @@ print('Solution path:',aStarGsa(practice, practiceH, 'S', 'G'))
 <!-- ====================ALL JS FILE HERE===================================== -->
 <!-- jQuery -->
 <script src="../assets/js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="../assets/js/bootstrap.min.js"></script>
-<!-- responsive-menu. -->
-<script src="../assets/js/responsive-menu.js"></script>
 <!-- scrollUp  JS -->
 <script src="../assets/js/jquery.scrollUp.min.js"></script>
-<!-- lightbox js -->
-<script src="../assets/js/lightbox.min.js"></script>
-<!-- carousel js -->
-<script src="../assets/js/owl.carousel.min.js"></script>
-<!-- wow JS -->
-<script src="../assets/js/aos.min.js"></script>
 <!-- main  JS -->
 <script src="../assets/js/main.js"></script>
 </body>
